crates/franken-node/tests/snapshots/supply_chain_golden_artifacts__trust_card_canonical_json.snap
---
source: crates/franken-node/tests/supply_chain_golden_artifacts.rs
expression: scrubbed
---
{"active_quarantine":false,"audit_history":[{"detail":"Initial trust card generation","event_code":"TRUST_CARD_CREATED","timestamp":"[TIMESTAMP]","trace_id":"trace-12345"},{"detail":"Provenance verification completed","event_code":"TRUST_CARD_VERIFIED","timestamp":"[TIMESTAMP]","trace_id":"trace-67890"}],"behavioral_profile":{"filesystem_access":false,"network_access":true,"profile_summary":"Network scanner with read-only file access","subprocess_access":false},"capability_declarations":[{"description":"Scan network endpoints for vulnerabilities","name":"network.scan","risk":"medium"},{"description":"Read configuration files","name":"fs.read_config","risk":"low"}],"card_hash":"1cc14664402eb2cbf2267d80cf55ee33500c074eeca1e41dc206eabfffba37dd","certification_level":"gold","dependency_trust_summary":[{"dependency_id":"npm:lodash","trust_level":"high"},{"dependency_id":"npm:axios","trust_level":"medium"}],"derivation_evidence":null,"extension":{"extension_id":"npm:@acme/security-scanner","version":"2.1.0"},"last_verified_timestamp":"[TIMESTAMP]","previous_version_hash":null,"provenance_summary":{"artifact_hashes":["sha256:abc123def456","sha256:fed456cba987"],"attestation_level":"L3-verified-build","source_uri":"https://github.com/acme-corp/security-scanner","verified_at":"[TIMESTAMP]"},"publisher":{"display_name":"ACME Corporation","publisher_id":"acme-corp"},"registry_signature":"802b08c6a660a041b96a7de31d132f1febdf53b7ec3855c81aa82bece2e98198","reputation_score_basis_points":8750,"reputation_trend":"improving","revocation_status":{"status":"active"},"schema_version":"trust-card-v1.0","trust_card_version":42,"user_facing_risk_assessment":{"level":"low","summary":"Well-maintained security tool with verified provenance"}}
