crates/franken-node/tests/snapshots/supply_chain_golden_artifacts__trust_card_comparison_human.snap
---
source: crates/franken-node/tests/supply_chain_golden_artifacts.rs
expression: rendered
---
compare npm:@acme/security-scanner vs npm:@acme/security-scanner:
- certification_level: gold -> platinum
- reputation_score_basis_points: 8750 -> 9500
